# rust_full_stack

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/db/: mod.rs  schema.rs
frontend/: Cargo.toml
migrations/2020-10-24-082745_task/: up.sql
