[package]
name = "frontend"
version = "0.1.0"
authors = ["Pierre-Alain <ouvrard.pierre.alain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rust_full_stack = { path = ".."}
seed = "^0.4.0"
wasm-bindgen = "^0.2.50"
web-sys = "^0.3.27"
